# claude-observatory

./: .gitignore  BUILD_PLAN.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  changes-i-made.md  landing.html  threat-model.md  tldr.md  viva-post.md
docs/images/: build_cover.py
examples/: ab-spec.yaml
scripts/: seed-fixtures.sh
tests/fixtures/: generate.py  medium.jsonl  sidechain.jsonl  small.jsonl
