[project]
name = "claude-observatory"
version = "0.1.0"
description = "Local-first observability + closed-loop self-improvement for Claude Code"
readme = "BUILD_PLAN.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "ao92265" }]
dependencies = [
  "observatory-core",
  "observatory-healthdoctor",
  "observatory-healthcheck",
  "observatory-web",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "hypothesis>=6",
  "ruff>=0.5",
  "mypy>=1.10",
  "coverage[toml]>=7",
]

[project.scripts]
observatory = "observatory_core.cli:main"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
observatory-core = { workspace = true }
observatory-healthdoctor = { workspace = true }
observatory-healthcheck = { workspace = true }
observatory-web = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests", "packages/*/tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.coverage.run]
source = ["packages"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__", "raise NotImplementedError"]
